Fixes accessibility issues in edition switcher, meganav titles are not buttons anymore in the desktop layout, edition dropdown does not get cut off if search is open. Also simplifies markup and leaves it in an almost final state, we might add o-expander later

--- a/src/scss/_tools.scss
+++ b/src/scss/_tools.scss
@@ -1,5 +1,12 @@
+// One level nav with elements separated by a pipe, and no icons
 .o-header__tools {
-	float: right;
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	@include oGridRespondTo($until: M) {
+		display: none;
+	}
 }
 
 .o-header__tools-items {
@@ -9,34 +16,22 @@
 
 .o-header__tools-item {
 	display: inline-block;
-
-	.o-header__tools--masthead & {
-		position: relative;
-		display: inline-block;
-
-		&:before {
-			content: ' ';
-			position: absolute;
-			width: 2px;
-			height: 14px;
-			top: 50%;
-			left: -3px;
-			margin-top: -7px;
-			background-color: oColorsGetPaletteColor('warm-5');
-		}
-		&:first-child:before {
-			display: none;
-		}
-	}
-}
-
-.o-header__tools-item--logged-in {
 	position: relative;
-	display: none;
-}
 
-.o-header__tools-item--logged-out {
-	display: none;
+	&:before {
+		content: '';
+		position: absolute;
+		width: 2px;
+		height: 14px;
+		top: 50%;
+		left: -3px;
+		margin-top: -7px;
+		background-color: oColorsGetPaletteColor('warm-5');
+	}
+
+	&:first-child:before {
+		display: none;
+	}
 }
 
 .o-header__tools-link {
@@ -47,26 +42,9 @@
 		text-decoration: underline;
 	}
 
-	.o-header--light-on-dark .o-header__tools--masthead & {
+	.o-header--light-on-dark &,
+	.o-header--light-on-dark &:hover,
+	.o-header--light-on-dark &:focus {
 		color: oColorsGetPaletteColor('white');
-	}
-}
-
-.o-header__tools-item--account {
-	display: none;
-
-	@include oGridRespondTo(M) {
-		display: inline-block;
-	}
-}
-
-.o-header__tools--masthead {
-	float: none;
-	position: absolute;
-	top: 0;
-	right: 0;
-
-	@include oGridRespondTo($until: M) {
-		display: none;
 	}
 }
